first commit of modernization task (CONNECTORS-1784)